<resources>
    <string name="app_name" translatable="false">NumberGuesser</string>
    <string name="instruction_main_1">Выставь диапазон игры</string>
    <string name="guessed_number_range" translatable="false">%d - %d</string>
    <string name="instruction_take_attempts">Понадобится %d попыток, чтобы угадать число</string>
    <string name="exit_confirmation">Вы действительно хотите выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="attempt_number">Попытка %d</string>
    <string name="start_button_text">Играть</string>
    <string name="more_button">Больше</string>
    <string name="more_button_warning">Число не может быть больше, чем %d</string>
    <string name="less_button">Меньше</string>
    <string name="less_button_warning">Число не может быть меньше, чем %d</string>
    <string name="finish_button">Число угадано</string>

    <string name="help_dialog_title">Правила игры</string>
    <string name="help_dialog_message">Загадай число в выставленном диапазоне и запомни его. Программа попытается его угадать. После каждой попытки указывай, больше твое число или меньше. Когда число угадано, нажми на кнопку «Число угадано».
    </string>

    <string name="finish_text">Угадано</string>
    <string name="finish_attempts">за %d попыток</string>
    <string name="again_button">Еще раз</string>
    <string name="go_to_begin_button">В начало</string>
    <string name="dark_mode">Темная тема</string>
    <string name="open_menu_button_description">Открыть меню</string>
    <string name="help_dialog_ok" translatable="false">OK</string>

    <string name="spinner_title">Язык</string>
    <string name="rus_lang" translatable="false">Русский</string>
    <string name="zh_lang" translatable="false">中文</string>
    <string name="eng_lang" translatable="false">English</string>
    <string name="es_lang" translatable="false">Español</string>
</resources>