<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <View
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary_color"
        android:elevation="8dp"
        android:transitionName="topPanelNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/secondary_color"
        android:contentDescription="@string/open_menu_button_description"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        app:srcCompat="@drawable/baseline_question_mark_48"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/attemptsSpentText"
        style="@style/TextBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/attempt_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentNumber"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attemptsSpentText" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/less_button"
        style="@style/TextButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/base_button"
        android:text="@string/less_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/finish_button"
        app:layout_constraintEnd_toStartOf="@id/more_button"
        app:layout_constraintStart_toStartOf="@id/finish_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/more_button"
        style="@style/TextButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/base_button"
        android:text="@string/more_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/finish_button"
        app:layout_constraintEnd_toEndOf="@id/finish_button"
        app:layout_constraintStart_toEndOf="@id/less_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_button"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/base_button"
        android:text="@string/finish_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>