<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <View
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/primary_color"
        android:elevation="8dp"
        android:transitionName="topPanelExpanded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/instruction_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="46dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="200dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/card_background">

            <TextView
                style="@style/TextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/instruction_main_1" />

            <com.google.android.material.slider.Slider
                android:id="@+id/number_range_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:stepSize="100"
                android:value="1000"
                android:valueFrom="100"
                android:valueTo="10000"
                app:haloColor="@color/secondary_color"
                app:thumbColor="@color/secondary_color"
                app:tickVisible="false"
                app:trackColorActive="@color/secondary_color"
                app:trackColorInactive="@color/slider_track_inactive_color" />

            <TextView
                android:id="@+id/number_range_text"
                style="@style/TextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:text="@string/guessed_number_range"
                android:textSize="54sp" />

            <TextView
                android:id="@+id/take_attempts_text"
                style="@style/TextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/instruction_take_attempts" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/base_button"
        android:text="@string/start_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

